# dracut-efi-manager

./: Cargo.toml  README.md  build.rs  settings.toml
.github/workflows/: release-bin.yml  rust.yml
libalpm/: 90-dracut-efibin-clean.hook  90-dracut-efibin-install.hook
src/: main.rs
templates/: 90-dracut-efibin-clean.hook  90-dracut-efibin-install.hook
