[package]
name = "dracut-stub-manager"
authors = ["ju6ge <judge@felixrichter.tech>"]
description = "This is a tool to automate building multiple efi stubs, it is intended to be used as a pacman hook"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["cargo", "derive"] }
config = "0.13.3"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
spinners = "4.1.0"
version_operators = "0.0.1"
