[package]
name = "dracut-efi-manager"
authors = ["ju6ge <judge@felixrichter.tech>"]
description = "This is a tool to automate building multiple efi binaries, it is intended to be used as a pacman hook"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["cargo", "derive"] }
config = "0.13.3"
efivar = { git = "https://github.com/iTrooz/efiboot-rs" }
gpt = "3.1.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
version_operators = "0.0.1"

[build-dependencies]
askama = "0.12.0"
